# django-api-study

./: .dockerignore  .gitignore  Dockerfile  deploy-eks.tf  example-deployment.yaml  pyproject.toml  terraform.tfstate  terraform.tfstate.backup
api/: settings.py  urls.py
